--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,10 @@
     "web-vitals": "^2.1.0"
   },
 
-  "resolution": {
+  "resolutions": {
     "autoprefixer": "10.4.5"
   },
-  
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
