--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "5.3.2",
     "autoprefixer": "10.4.5",
+    "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -20,11 +21,9 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
-
   "resolutions": {
     "autoprefixer": "10.4.5"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
